--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+*.bin
+*.out
+*.pdf
+.idea/
+tc_savedir/
+log/
+results/
+out/
+env/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
