--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,8 @@
-absl-py==0.8.0
-astor==0.8.0
-atlas==0.27.0
-boto==2.49.0
-boto3==1.9.244
-botocore==1.12.244
-certifi==2019.9.11
-chardet==3.0.4
-colorama==0.4.1
-contextlib2==0.5.5
-coverage==4.5.4
-decorator==4.4.0
-docutils==0.15.2
-future==0.17.1
-gast==0.3.2
+numpy==1.15.4
+nltk==3.4
 gensim==3.6.0
-grpcio==1.24.1
-h5py==2.10.0
-hyperopt==0.1.2
-idna==2.8
-jmespath==0.9.4
-joblib==0.14.0
-json-tricks==3.13.2
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-Markdown==3.1.1
-networkx==2.3
-nltk==3.4.5
+torch==1.0.0
+tensorflow_gpu==1.12.0
+atlas==0.27.0
+tensorflow==1.12.0
 nni==0.9.1.1
-numpy==1.17.2
-pkg-resources==0.0.0
-protobuf==3.10.0
-psutil==5.6.3
-pymongo==3.9.0
-python-dateutil==2.8.0
-PythonWebHDFS==0.2.3
-requests==2.22.0
-ruamel.yaml==0.16.5
-ruamel.yaml.clib==0.2.0
-s3transfer==0.2.1
-schema==0.7.1
-scikit-learn==0.21.3
-scipy==1.3.1
-simplejson==3.16.0
-singledispatch==3.4.0.3
-six==1.12.0
-sklearn==0.0
-smart-open==1.8.4
-tensorboard==1.12.2
-tensorflow-gpu==1.12.0
-termcolor==1.1.0
-threadpool==1.3.2
-tqdm==4.36.1
-urllib3==1.25.6
-Werkzeug==0.16.0
