--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ tuner:
     controller_steps: 50
 
 trial:
-  command: sh ./run_search_arc_try.sh
+  command: sh ./run_search_arc_multi_path.sh
   codeDir: ./
   gpuNum: 1
   nasMode: enas_mode
