--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ tuner:
     controller_steps: 50
 
 trial:
-  command: sh ./scripts/run_search_try.sh
+  command: sh ./run_search_try.sh
   codeDir: ./
   gpuNum: 1
   nasMode: enas_mode
