--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,7 @@ tuner:
   classArgs:
     child_steps: 350
     controller_steps: 50
+    sample_step: 10
 trial:
   command: sh ./scripts/run_search_try.sh
   codeDir: ./
